Fix missing icon for collapse all button
Fixes #17967

--- a/themes/pmahomme/scss/_icons.scss
+++ b/themes/pmahomme/scss/_icons.scss
@@ -560,6 +560,11 @@
   background-image: url('../img/s_cog.png');
 }
 
+.ic_s_collapseall {
+  background-image: url('../img/s_collapseall.png');
+  background-position: center;
+}
+
 .ic_s_db {
   background-image: url('../img/s_db.png');
 }
